fix arrow getting cut off on poplist due to page scrolling behaviour

--- a/scss/emberui/eui-main.scss
+++ b/scss/emberui/eui-main.scss
@@ -1,3 +1,14 @@
+// Disables page scrolling
+.eui-modal-open {
+  overflow: hidden;
+
+  // Required for mobile
+  &.ember-application > .ember-view:first-of-type,
+  .ember-application > .ember-view:first-of-type {
+    overflow: hidden;
+  }
+}
+
 @media (min-device-width : 320px) and (max-device-width : 480px) {
   // Help prevents page scrolling on mobile when modal or poplist is open
   .ember-application > .ember-view:first-of-type {
