--- a/scss/emberui/eui-modal.scss
+++ b/scss/emberui/eui-modal.scss
@@ -48,14 +48,3 @@
     width: 100%;
   }
 }
-
-// Disables page scrolling
-.eui-modal-open {
-  overflow: hidden;
-
-  // Required for mobile
-  &.ember-application > .ember-view:first-of-type,
-  .ember-application > .ember-view:first-of-type {
-    overflow: hidden;
-  }
-}
