--- a/scss/emberui/eui-poplist.scss
+++ b/scss/emberui/eui-poplist.scss
@@ -7,6 +7,7 @@
   outline: none;
   max-height: calc(100% - 100px);
   border: solid 1px rgba(0,0,0,0.15);
+  overflow: visible !important;
 
   &.eui-closing {
     opacity: 0;
