--- a/scss/emberui/eui-selectdate.scss
+++ b/scss/emberui/eui-selectdate.scss
@@ -83,15 +83,3 @@
     }
   }
 }
-
-
-// Disables page scrolling
-.eui-calendar-open {
-  overflow: hidden;
-
-  // Required for mobile
-  &.ember-application > .ember-view:first-of-type,
-  .ember-application > .ember-view:first-of-type {
-    overflow: hidden;
-  }
-}
